--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,12 +1,7 @@
-@font-face {
-    font-family: "NotoSansJP";
-    src: url("../assets/fonts/NotoSansJP-Medium.otf") format("opentype"),
-    url("../assets/fonts/NotoSansJP-Regular.otf") format("opentype");
-}
 
 h1 {
     color: #2077b3;
-    font-family: NotoSansJP, serif;
+    font-family: Roboto, serif;
 }
 
 a {
